# kwin-portal-bridge

./: .gitignore  Cargo.toml  README.md
scripts/: _bridge_common.sh  pipeline-build-local.sh  teach-overlay-hide.sh  teach-overlay-preview.sh  teach-overlay-screens.sh  teach-overlay-serve.sh  teach-overlay-show.sh  teach-overlay-wait-event.sh  teach-overlay-working.sh
src/: capture.rs  cli.rs  daemon.rs  desktop_apps.rs  error.rs  exclude_state.rs  executor.rs  kwin.rs  main.rs  mcp.rs  model.rs  portal.rs  session_overlay.rs  teach_overlay.rs  token_store.rs  util.rs  xorg_capture.rs
