[package]
name = "kwin-portal-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ashpd = "0.13"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dbus = "0.9"
image = "0.25"
lamco-portal = "0.4"
lamco-pipewire = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wl-clipboard-rs = "0.9"
