[package]
name = "kwin-portal-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ashpd = "0.13"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dbus = "0.9"
freedesktop-desktop-entry = { version = "0.8", default-features = false }
freedesktop-icons = "0.4"
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
iced_layershell = "0.17.1"
image = "0.25"
lamco-portal = "0.4"
lamco-pipewire = "0.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.1"
tempfile = "3.13"
tokio = { version = "1.51.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wl-clipboard-rs = "0.9"
uuid = { version = "1.23.0", features = ["v4"] }
rmcp = { version = "1.4.0", features = ["schemars", "transport-io"] }
xcb = "1.7.0"
thiserror = "2.0.18"
